--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -6,3 +6,23 @@
     padding: 16px;
     text-align: center;
 }
+
+.PersonV2{
+    width: 60%;
+    margin: 16px auto;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
+    padding: 16px;
+    text-align: center;
+    background-color: orange;
+}
+
+.PersonV3{
+    width: 60%;
+    margin: 16px auto;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
+    padding: 16px;
+    text-align: center;
+    background-color: pink;
+}
