--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -7,22 +7,10 @@
     text-align: center;
 }
 
-.PersonV2{
-    width: 60%;
-    margin: 16px auto;
-    border: 1px solid #eee;
-    box-shadow: 0 2px 3px #ccc;
-    padding: 16px;
-    text-align: center;
+.orangeBackgroundColor{
     background-color: orange;
 }
 
-.PersonV3{
-    width: 60%;
-    margin: 16px auto;
-    border: 1px solid #eee;
-    box-shadow: 0 2px 3px #ccc;
-    padding: 16px;
-    text-align: center;
+.pinkBackgroundColor{
     background-color: pink;
 }
