Using Radium for Media Queries

--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -14,3 +14,9 @@
 .pinkBackgroundColor{
     background-color: pink;
 }
+
+/* @media (min-width: 500px) {
+    .Person {
+        width: 450px;
+    }
+} */
