--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -30,8 +30,8 @@
     background-color: white;
 }
 
-/* @media (min-width: 500px) {
+@media (min-width: 500px) {
     .Person {
         width: 450px;
     }
-} */
+}
